# fsdr-blocks

./: .gitignore  Cargo.toml  Makefile  README.md  check.sh  config.toml
.github/workflows/: ci.yml  pre-release.yml  release.yml
benches/channel/: crossbeam_sink.rs  crossbeam_source.rs
benches/cw/: baseband_to_cw.rs  bb_to_cw.rs  cw_to_char.rs  shared.rs
crates/sigmf/: Cargo.toml  Makefile  README.md  quickcheck-test.sh
crates/sigmf-utilities/: Cargo.toml  README.md
crates/sigmf-utilities/src/: sigmf_col.rs  sigmf_convert.rs
crates/sigmf/samples/: index.sigmf-meta  test1.sigmf-data  test1.sigmf-meta
crates/sigmf/src/: annotation.rs  antenna_extension.rs  capture.rs  collection.rs  dataset_format.rs  description.rs  errors.rs  extension.rs  global.rs  lib.rs  recording.rs  sigmf_hash.rs
crates/sigmf/tests/: dataset_format.rs  description.rs  sigmf_meta.rs
crates/sigmf/utilities/: Cargo.toml
crates/sigmf/utilities/src/: sigmf_col.rs  sigmf_hash.rs
examples/agc/: audio_agc.rs
examples/sigmf-samples/: Cargo.toml
examples/sigmf-samples/src/: sigmf_convert.rs
examples/zenoh/: Cargo.toml  README.md  zenoh_receiver.rs  zenoh_sender.rs
src/: agc.rs  lib.rs  stdinout.rs  type_converters.rs
src/async_channel/: async_channel_sink.rs  async_channel_source.rs  mod.rs
src/channel/: crossbeam_sink.rs  crossbeam_source.rs  mod.rs
src/cw/: baseband_to_cw.rs  bb_to_cw.rs  cw_to_char.rs  mod.rs  shared.rs
src/math/: freq_shift.rs  mod.rs
src/serde_pmt/: deserialiser.rs  error.rs  mod.rs  serialiser.rs
src/sigmf/: annotation.rs  collection.rs  description.rs  global.rs  mod.rs  sigmf_sink.rs  sigmf_source.rs
src/stream/: deinterleave.rs  mod.rs
src/zenoh/: pub_sink.rs  sub_source.rs
tests/: serde_pmt.rs  tests.rs  type_converters.rs
tests/async_channel/: async_channel_sink.rs  async_channel_source.rs  mod.rs
tests/channel/: crossbeam_sink.rs  crossbeam_source.rs  mod.rs
tests/cw/: baseband_to_cw.rs  bb_to_cw.rs  cw_to_char.rs  shared.rs
tests/math/: freq_shift.rs  mod.rs
tests/sigmf/: mod.rs  sigmf.rs  sigmf_graph.rs  sigmf_meta.rs  sigmf_source.rs
tests/stream/: deinterleave.rs  mod.rs
