[package]
name = "fsdr-blocks"
version = "0.1.0"
edition = "2021"
authors = ["FutureSDR Contributors <team@futuresdr.org>"]
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/fsdr-blocks/"
description = "Building blocks for FutureSDR signal processing library for SDR and real-time DSP."
keywords = ["sdr", "radio", "blocks", "iir", "fir", "async", "acceleration"]
categories = ["asynchronous", "concurrency", "hardware-support", "science"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futuresdr = { git="https://github.com/FutureSDR/FutureSDR", version = "0.0"}
async-trait = "0.1.52"

[workspace]
members = [
    ".",
]
