[package]
name = "fsdr-blocks"
version = "0.1.0"
edition = "2021"
authors = ["FutureSDR Contributors <team@futuresdr.org>"]
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/fsdr-blocks/"
description = "Building blocks for FutureSDR signal processing library for SDR and real-time DSP."
keywords = ["sdr", "radio", "dsp", "async", "acceleration"]
categories = ["asynchronous", "concurrency", "hardware-support", "science"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futuresdr = { git = "https://github.com/FutureSDR/FutureSDR", branch = "main" }
#futuresdr = { version="0.0.32" }
async-trait = "0.1.68"
crossbeam-channel = { version = "0.5.8", optional = true }
bimap = { version = "0.6.3", optional = true }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
rand = { version = "0.8.5" }

[features]
default = []
crossbeam = ["dep:crossbeam-channel"]
cw = ["dep:bimap"]

[workspace]
members = [
    ".",
]

[[bench]]
name = "crossbeam_sink"
path = "benches/channel/crossbeam_sink.rs"
harness = false
required-features = ["crossbeam"]

[[bench]]
name = "crossbeam_source"
path = "benches/channel/crossbeam_source.rs"
harness = false
required-features = ["crossbeam"]

[[bench]]
name = "cw_to_char"
path = "benches/cw/cw_to_char.rs"
harness = false
required-features = ["cw"]

[[bench]]
name = "bb_to_cw"
path = "benches/cw/baseband_to_cw.rs"
harness = false
required-features = ["cw"]

[[bench]]
name = "shared"
path = "benches/cw/shared.rs"
harness = false
required-features = ["cw"]