[package]
name = "sigmf"
version = "0.1.0"
edition = "2021"
authors = ["FutureSDR Contributors <team@futuresdr.org>", "Loïc Fejoz <loic@fejoz.net>"]
license = "Apache-2.0 or MIT"
repository = "https://github.com/futuresdr/fsdr-blocks/"
description = "Crate for interfacing to SigMF files"
keywords = ["sdr", "radio", "dsp", "sigmf", "fileformat"]
categories = ["science"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
quickcheck=['dep:quickcheck']
build-binary=['dep:clap', 'dep:anyhow', 'dep:sha2']

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
thiserror = "1.0.50"
quickcheck = {version = "1.0.3", optional = true}
clap = { version = "4.4.7", optional = true, features = ["derive"] }
anyhow = { version = "1.0.75", optional = true }
sha2 = { version = "0.10.8", optional = true }

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
quickcheck_macros = "1"
sigmf = {features = ["quickcheck"], path="."}

[lib]
name = "sigmf"
path = "src/lib.rs"

[[bin]]
name = "sigmf-hash"
path = "src/sigmf_hash.rs"
required-features = ["build-binary"]
