[package]
name = "sigmf-samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
fsdr-blocks = {path="../../"}
# futuresdr = { git = "https://github.com/FutureSDR/FutureSDR", branch = "main" }
futuresdr = {path="../../../FutureSDR"}

[[bin]]
name = "sigmf-convert"
path = "src/sigmf_convert.rs"