[package]
name = "sigmf-utilities"
version = "0.1.0"
edition = "2021"
authors = ["FutureSDR Contributors <team@futuresdr.org>", "Loïc Fejoz <loic@fejoz.net>"]
license = "Apache-2.0 or MIT"
repository = "https://github.com/futuresdr/fsdr-blocks/"
description = "command-line tools to manipulate SigMF files"
keywords = ["sdr", "radio", "dsp", "sigmf", "fileformat"]
categories = ["science"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
thiserror = "1.0.50"
clap = { version = "4.4.7", features = ["derive"] }
anyhow = { version = "1.0.75"}
sigmf = {path="../"}


[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]

[[bin]]
name = "sigmf-hash"
path = "src/sigmf_hash.rs"
